# stele

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: design.md
examples/bash_nc/: README.md  update.sh
examples/bash_stele_msg/: README.md  update.sh
examples/rust_ipc/: README.md  main.rs
examples/rust_lib/: README.md  main.rs
shaders/: color_fragment.glsl  color_vertex.glsl  fragment.glsl  texture_fragment.glsl  texture_vertex.glsl
src/: cli.rs  geometry.rs  lib.rs  main.rs
src/ipc_server/: mod.rs
src/ui/: mod.rs  renderer.rs  window.rs
src/ui/renderer/: mod.rs  shaders.rs  text.rs
src/wayland/: mod.rs
stele_ipc/: Cargo.toml
stele_ipc/src/: lib.rs
