[package]
name = "stele"
version = "0.1.0"
description = "Extendable Wayland Vulkan Bar"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "GPL-3.0-only"
rust-version.workspace = true
edition.workspace = true

[workspace]
members = [
    "stele_ipc",
]

[workspace.package]
rust-version = "1.94.0"
edition = "2024"

[dependencies]
calloop = { version = "0.14.4", features = ["signals"] }
calloop-wayland-source = "0.4.1"
dirs = { version = "6.0.0" }
raw-window-handle = "0.6.2"
serde_json = { version = "1.0.149" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
smallvec = "1.15.1"
smithay-client-toolkit = { version = "0.20.0", default-features = false }
stele_ipc = { version = "0.1.0", path = "./stele_ipc", features = ["sctk", "vulkano"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
vulkano = { version = "0.35.2", default-features = false, features = ["macros"] }
wayland-backend = { version = "0.3.14", features = ["client_system"] }
vulkano-shaders = "0.35.0"
