[package]
name = "stele"
version = "0.1.0"
description = "Modular Wayland Vulkan Bar"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "GPL-3.0-only"
rust-version.workspace = true
edition.workspace = true

[workspace]
members = [
    "stele_ipc",
]

[workspace.package]
rust-version = "1.94.0"
edition = "2024"

[dependencies]
calloop = { version = "0.14.4", features = ["signals"] }
calloop-wayland-source = "0.4.1"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
dirs = { version = "6.0.0" }
image = { version = "0.25.10", default-features = false, features = ["rayon", "jpeg", "png"] }
pangocairo = "0.22.0"
pango = { version = "0.22.0", features = ["v1_44"] }
raw-window-handle = "0.6.2"
resvg = { version = "0.47.0", default-features = false }
serde_json = { version = "1.0.149" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
smallvec = "1.15.1"
smithay-client-toolkit = { version = "0.20.0", default-features = false }
stele_ipc = { version = "0.1.0", path = "./stele_ipc", features = ["clap", "send_message", "sctk"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano = { git = "https://github.com/vulkano-rs/vulkano", default-features = false, features = ["macros"] }
wayland-backend = { version = "0.3.14", features = ["client_system"] }
libc = "0.2.184"

[dev-dependencies]
chrono = "0.4.44"
