[package]
name = "stele_ipc"
version = "0.1.0"
description = "Stele IPC interface"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "GPL-3.0-only"
rust-version.workspace = true
edition.workspace = true

[features]
default = ["send_message", "serde"]
send_message = ["dep:dirs", "dep:serde_json"]
serde = ["dep:serde"]

[dependencies]
dirs = { version = "6.0.0", optional = true }
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
