[package]
name = "stele_ipc"
version = "0.1.0"
description = "Stele IPC interface"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "GPL-3.0-only"
rust-version.workspace = true
edition.workspace = true

[features]
default = ["send_message", "serde"]
sctk = ["dep:smithay-client-toolkit"]
send_message = ["dep:serde_json"]
serde = ["dep:serde"]
vulkano = ["dep:vulkano"]

[dependencies]
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
smithay-client-toolkit = { version = "0.20.0", default-features = false, optional = true }
vulkano = { version = "0.35.2", default-features = false, optional = true }
