[package]
name = "stele_ipc"
version = "0.1.0"
description = "Stele IPC interface"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "GPL-3.0-only"
rust-version.workspace = true
edition.workspace = true

[features]
default = ["send_message", "serde"]
# Provide smithay-client-toolkit type conversions.
sctk = ["dep:smithay-client-toolkit"]
# Functions for sending IPC messages.
send_message = ["dep:serde_json", "dep:dirs"]
# Add logging to `send_message` feature.
tracing = ["dep:tracing", "send_message"]
# Serde serialize/deserialize implementations.
serde = ["dep:serde"]
# Clap parsing support.
clap = ["serde", "dep:clap", "dep:serde_json"]

[dependencies]
dirs = { version = "6.0.0", optional = true }
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"], optional = true }
smithay-client-toolkit = { version = "0.20.0", default-features = false, optional = true }
tracing = { version = "0.1.44", optional = true }
clap = { version = "4.6.0", features = ["wrap_help"], optional = true }
